Kubernetes/traefik-ingress/middleware-forcehttps.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: force-https
spec:
  redirectScheme:
    scheme: https
