Kubernetes/traefik-ingress/service-ingress.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress
spec:
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: web
    - protocol: TCP
      port: 443
      targetPort: 443
      name: websecure
  type: LoadBalancer
