Kubernetes/traefik-ingress/service.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress
spec:
  selector:
    app: traefik-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: web
    - protocol: TCP
      port: 443
      targetPort: 443
      name: websecure
    # - protocol: TCP
    #   port: 8000
    #   name: tcp
    #   targetPort: 8000
    # - protocol: TCP
    #   port: 8080
    #   targetPort: 8080
    #   name: admin
  type: LoadBalancer
