Kubernetes/traefik-ingress/ingress-api.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name:  traefik-api-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.mwinkler.ga`)
    kind: Rule
    services:
    - kind: TraefikService
      name: noop@internal
    middlewares:
    - name: https-redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-api-ingress-tls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.mwinkler.ga`) && PathPrefix(`/api`) 
    kind: Rule
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: auth
  tls:
    certResolver: myresolver
